--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Welcome to SetupMyTV!</title>
+</head>
+<body>
+    <h1>Welcome to SetupMyTV!</h1>
+    <p>Your new streaming live TV website is coming soon.</p>
+</body>
+</html>
