--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Welcome to SetupMyTV!</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SetupMyTV</title>
 </head>
 <body>
-    <h1>Welcome to SetupMyTV!</h1>
-    <p>Your new streaming live TV website is coming soon.</p>
+  <!-- Header / Navigation -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main Content -->
+  <main>
+    <!-- Hero Section -->
+    <section id="hero">
+      <h1>Welcome to SetupMyTV</h1>
+      <p>Your one-stop solution for streaming live TV without cable.</p>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services">
+      <h2>Services We Offer</h2>
+      <ul>
+        <li>Fire Stick Setup</li>
+        <li>Roku Setup</li>
+        <li>Apple TV Setup</li>
+        <li>Smart TV Setup</li>
+      </ul>
+    </section>
+
+    <!-- FAQ Section -->
+    <section id="faq">
+      <h2>Frequently Asked Questions</h2>
+      <p>Coming soon!</p>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <p>For more information, email us at <a href="mailto:info@setupmytv.com">info@setupmytv.com</a>.</p>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 SetupMyTV</p>
+  </footer>
 </body>
 </html>
