--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Contact Section -->
     <section id="contact">
       <h2>Contact Us</h2>
-      <p>For more information, email us at <a href="mailto:info@setupmytv.com">info@setupmytv.com</a>.</p>
+      <p>For more information, email us at <a href="mailto:support@setupmytv.com">info@setupmytv.com</a>.</p>
     </section>
   </main>
 
