--- a/index.html
+++ b/index.html
@@ -1,70 +1,102 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SetupMyTV</title>
+  <!-- Bootstrap CSS -->
+  <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-M+JbM4pG5XfQYZ9f4U/c8uCM6U6L+8N9P70H1B/QE8B70rxkN3FcvFT6Nk0F0zzE"
+    crossorigin="anonymous"
+  />
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- Dark Mode Toggle Button -->
-  <button id="dark-mode-toggle" onclick="toggleDarkMode()">Dark Mode</button>
+  <button id="dark-mode-toggle" onclick="toggleDarkMode()" class="btn btn-secondary position-fixed" style="top: 10px; right: 10px; z-index: 1000;">Dark Mode</button>
 
   <!-- Header / Navigation -->
   <header>
-    <nav>
-      <ul>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#faq">FAQ</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">SetupMyTV</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+         <ul class="navbar-nav ml-auto">
+           <li class="nav-item">
+             <a class="nav-link" href="#services">Services</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="#faq">FAQ</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="#contact">Contact</a>
+           </li>
+         </ul>
+      </div>
     </nav>
   </header>
 
   <!-- Main Content -->
-  <main>
+  <main class="container mt-4">
     <!-- Hero Section -->
-    <section id="hero">
-      <h1>Welcome to SetupMyTV</h1>
-      <p>Your one-stop solution for streaming live TV without cable.</p>
+    <section id="hero" class="jumbotron">
+      <h1 class="display-4">Welcome to SetupMyTV</h1>
+      <p class="lead">Your one-stop solution for streaming live TV without cable.</p>
     </section>
 
     <!-- Services Section -->
-    <section id="services">
+    <section id="services" class="my-5">
       <h2>Services We Offer</h2>
-      <ul>
-        <li>Fire Stick Setup</li>
-        <li>Roku Setup</li>
-        <li>Apple TV Setup</li>
-        <li>Smart TV Setup</li>
+      <ul class="list-group">
+        <li class="list-group-item">Fire Stick Setup</li>
+        <li class="list-group-item">Roku Setup</li>
+        <li class="list-group-item">Apple TV Setup</li>
+        <li class="list-group-item">Smart TV Setup</li>
       </ul>
     </section>
 
     <!-- FAQ Section -->
-    <section id="faq">
+    <section id="faq" class="my-5">
       <h2>Frequently Asked Questions</h2>
       <p>Coming soon!</p>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section id="contact" class="my-5">
       <h2>Contact Us</h2>
-      <p>For more information, email us at <a href="mailto:support@setupmytv.com">Support@setupmytv.com</a>.</p>
+      <p>For more information, email us at <a href="mailto:support@setupmytv.com">info@setupmytv.com</a>.</p>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 SetupMyTV</p>
+  <footer class="bg-dark text-light py-3">
+    <div class="container text-center">
+      <p class="mb-0">&copy; 2025 SetupMyTV</p>
+    </div>
   </footer>
 
+  <!-- Bootstrap JS, Popper.js, and jQuery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDuBfvzQ+swZyZirR+S+TmIt9PAMcyiNSXcjg9Sly0rVN5a7xm"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4Agw4+0o/p4U7Ly/4SrtZ9Y8PvE+oiB2lCEh1hbH2Cc8g4pJNR3"
+    crossorigin="anonymous"></script>
   <!-- Dark Mode Toggle Script -->
   <script>
     function toggleDarkMode() {
       document.body.classList.toggle('dark-mode');
-      // Update button text based on mode
       var btn = document.getElementById('dark-mode-toggle');
-      if(document.body.classList.contains('dark-mode')){
+      if (document.body.classList.contains('dark-mode')) {
         btn.textContent = 'Light Mode';
       } else {
         btn.textContent = 'Dark Mode';
