--- a/index.html
+++ b/index.html
@@ -16,28 +16,42 @@
 </head>
 <body>
   <!-- Dark Mode Toggle Button -->
-  <button id="dark-mode-toggle" onclick="toggleDarkMode()" class="btn btn-secondary position-fixed" style="top: 10px; right: 10px; z-index: 1000;">Dark Mode</button>
+  <button
+    id="dark-mode-toggle"
+    onclick="toggleDarkMode()"
+    class="btn btn-secondary position-fixed"
+    style="top: 10px; right: 10px; z-index: 1000;"
+  >
+    Dark Mode
+  </button>
 
   <!-- Header / Navigation -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="#">SetupMyTV</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-         <ul class="navbar-nav ml-auto">
-           <li class="nav-item">
-             <a class="nav-link" href="#services">Services</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="#faq">FAQ</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="#contact">Contact</a>
-           </li>
-         </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#services">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#faq">FAQ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
       </div>
     </nav>
   </header>
@@ -70,7 +84,10 @@
     <!-- Contact Section -->
     <section id="contact" class="my-5">
       <h2>Contact Us</h2>
-      <p>For more information, email us at <a href="mailto:support@setupmytv.com">info@setupmytv.com</a>.</p>
+      <p>
+        For more information, email us at
+        <a href="mailto:support@setupmytv.com">info@setupmytv.com</a>.
+      </p>
     </section>
   </main>
 
@@ -82,26 +99,46 @@
   </footer>
 
   <!-- Bootstrap JS, Popper.js, and jQuery -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  <script
+    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDuBfvzQ+swZyZirR+S+TmIt9PAMcyiNSXcjg9Sly0rVN5a7xm"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4Agw4+0o/p4U7Ly/4SrtZ9Y8PvE+oiB2lCEh1hbH2Cc8g4pJNR3"
-    crossorigin="anonymous"></script>
-  <!-- Dark Mode Toggle Script -->
+    crossorigin="anonymous"
+  ></script>
+  
+  <!-- Dark Mode Toggle Script with Local Storage -->
   <script>
     function toggleDarkMode() {
       document.body.classList.toggle('dark-mode');
       var btn = document.getElementById('dark-mode-toggle');
       if (document.body.classList.contains('dark-mode')) {
         btn.textContent = 'Light Mode';
+        localStorage.setItem('darkMode', 'true');
       } else {
         btn.textContent = 'Dark Mode';
+        localStorage.setItem('darkMode', 'false');
       }
     }
+
+    // On page load, check if dark mode was previously enabled
+    window.addEventListener('DOMContentLoaded', function() {
+      if (localStorage.getItem('darkMode') === 'true') {
+        document.body.classList.add('dark-mode');
+        document.getElementById('dark-mode-toggle').textContent = 'Light Mode';
+      } else {
+        document.body.classList.remove('dark-mode');
+        document.getElementById('dark-mode-toggle').textContent = 'Dark Mode';
+      }
+    });
   </script>
 </body>
 </html>
