--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
       <div class="container">
         <h2 class="mb-4">Services We Offer</h2>
         <div class="row">
+          <!-- Fire Stick Setup -->
           <div class="col-md-6 col-lg-3 mb-3">
-            <div class="card">
+            <div class="card h-100">
               <div class="card-body">
                 <h5 class="card-title">Fire Stick Setup</h5>
                 <p class="card-text">
@@ -83,8 +84,9 @@
               </div>
             </div>
           </div>
+          <!-- Roku Setup -->
           <div class="col-md-6 col-lg-3 mb-3">
-            <div class="card">
+            <div class="card h-100">
               <div class="card-body">
                 <h5 class="card-title">Roku Setup</h5>
                 <p class="card-text">
@@ -93,8 +95,9 @@
               </div>
             </div>
           </div>
+          <!-- Apple TV Setup -->
           <div class="col-md-6 col-lg-3 mb-3">
-            <div class="card">
+            <div class="card h-100">
               <div class="card-body">
                 <h5 class="card-title">Apple TV Setup</h5>
                 <p class="card-text">
@@ -103,8 +106,9 @@
               </div>
             </div>
           </div>
+          <!-- Smart TV Setup -->
           <div class="col-md-6 col-lg-3 mb-3">
-            <div class="card">
+            <div class="card h-100">
               <div class="card-body">
                 <h5 class="card-title">Smart TV Setup</h5>
                 <p class="card-text">
