--- a/index.html
+++ b/index.html
@@ -68,52 +68,45 @@
       </div>
     </section>
 
-    <!-- Services Section -->
+    <!-- Updated Services Section -->
     <section id="services" class="py-5">
       <div class="container">
-        <h2 class="mb-4">Services We Offer</h2>
+        <h2 class="mb-4">Our Services</h2>
         <div class="row">
-          <!-- Fire Stick Setup -->
-          <div class="col-md-6 col-lg-3 mb-3">
+          <!-- DIY Streaming Setup Tutorial -->
+          <div class="col-md-6 col-lg-4 mb-3">
             <div class="card h-100">
               <div class="card-body">
-                <h5 class="card-title">Fire Stick Setup</h5>
+                <h5 class="card-title">DIY Streaming Setup Tutorial</h5>
                 <p class="card-text">
-                  Get your Fire Stick up and running for seamless streaming.
+                  Learn how to set up your TV with Fire Stick, Roku, Apple TV, and more using our comprehensive video tutorial. Discover how to cut the cord and switch to streaming easily while finding the best streaming provider to suit your needs.
                 </p>
+                <p class="card-text"><strong>Price:</strong> $29.99</p>
               </div>
             </div>
           </div>
-          <!-- Roku Setup -->
-          <div class="col-md-6 col-lg-3 mb-3">
+          <!-- In-Person Setup & Training -->
+          <div class="col-md-6 col-lg-4 mb-3">
             <div class="card h-100">
               <div class="card-body">
-                <h5 class="card-title">Roku Setup</h5>
+                <h5 class="card-title">In-Person Setup & Training</h5>
                 <p class="card-text">
-                  Enjoy quick Roku setup for all your favorite channels.
+                  Let us come to your home to install your Fire Stick, Roku, or other streaming device. We'll spend time with you to go over how to use your new setup and answer all your questions.
                 </p>
+                <p class="card-text"><strong>Base Price:</strong> $129.99</p>
+                <p class="card-text"><strong>Additional TV Setup:</strong> $19.99 each</p>
               </div>
             </div>
           </div>
-          <!-- Apple TV Setup -->
-          <div class="col-md-6 col-lg-3 mb-3">
+          <!-- Customized Streaming Solutions (Optional) -->
+          <div class="col-md-6 col-lg-4 mb-3">
             <div class="card h-100">
               <div class="card-body">
-                <h5 class="card-title">Apple TV Setup</h5>
+                <h5 class="card-title">Customized Streaming Solutions</h5>
                 <p class="card-text">
-                  Configure Apple TV for a sleek and user-friendly experience.
+                  Need a tailored solution? We offer personalized advice on selecting the right streaming services and devices that perfectly match your lifestyle.
                 </p>
-              </div>
-            </div>
-          </div>
-          <!-- Smart TV Setup -->
-          <div class="col-md-6 col-lg-3 mb-3">
-            <div class="card h-100">
-              <div class="card-body">
-                <h5 class="card-title">Smart TV Setup</h5>
-                <p class="card-text">
-                  Streamline your Smart TV to access your favorite content.
-                </p>
+                <p class="card-text">Contact us for a custom quote.</p>
               </div>
             </div>
           </div>
