--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-well this is what i had can u update off of this <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
